# ARK-Advanced-Rocketry-Kernel

./: .gitignore  CMakeLists.txt  Config.hpp  LICENSE  README.md  ark_import.cmake  config.h  main.cpp  main.h  pytest.ini
ARK/: ARK.h  ark.cpp  ark.h  sources.cmake
ARK/Arch/Pico/: Entry.cpp
ARK/Arch/Pico/Hal/I2c/: I2c.hpp
ARK/Arch/Pico/Hal/Time/: Time.cpp
ARK/Core/: Config.h  FlightSystem.cpp  FlightSystem.h  StateMachine.cpp  StateMachine.h
ARK/HAL/: ISensor.h  MockSensors.h
ARK/Kernel/MicroKernels/ModulesKernel/: ModulesKernel.cpp  ModulesKernel.hpp
ARK/Kernel/StateMachine/: State_Util.hpp  States.cpp  States.hpp
ARK/Kernel/StateMachine/States/: ApogeeState.cpp  ApogeeState.hpp  ArmedState.cpp  ArmedState.hpp  AscentState.cpp  AscentState.hpp  BootState.cpp  BootState.hpp  BurnoutState.cpp  BurnoutState.hpp  CalibrationState.cpp  CalibrationState.hpp  CoastingState.cpp  CoastingState.hpp  CruisingState.cpp  CruisingState.hpp  DescentState.cpp  DescentState.hpp  DoubleDeploymentState.cpp  DoubleDeploymentState.hpp  DrogueState.cpp  DrogueState.hpp  FailsafeState.cpp  FailsafeState.hpp  IdleState.cpp  IdleState.hpp  InitializingState.cpp  InitializingState.hpp  LandedState.cpp  LandedState.hpp  LandingDetectionState.cpp  LandingDetectionState.hpp  LaunchState.cpp  LaunchState.hpp  MainDeploymentState.cpp  MainDeploymentState.hpp  PreArmState.cpp  PreArmState.hpp  SeparationState.cpp  SeparationState.hpp
Documentation/: StateTransitionLogic.md
Flight_Logic/: flight_config.h  flight_states.cpp  flight_states.h  flight_system.cpp  flight_system.h
Modules/: ModulesManager.cpp  ModulesManager.hpp
Modules/BMP280/: BMP280.cpp  BMP280.hpp
Modules/Buzzer/: Buzzer.cpp  Buzzer.hpp
Modules/L89/: L89.cpp  L89.hpp
Modules/LED/: LED.cpp  LED.hpp
Modules/MPU9250/: MPU9250.cpp  MPU9250.hpp
Modules/NRF24/: NRF24.cpp  NRF24.hpp
Modules/QMC5883L/: QMC5883L.cpp  QMC5883L.hpp
Tests/: IntegrationTests.cpp  Makefile  TestFramework.h  __init__.py  conftest.py  run_tests  test_large_flight_sim.py  test_state_transitions.py
Tools/: Build.py  SetupEnv.py  Upload.py
User/: UserCode.cpp  UserTransitions.cpp
User_App/: main.cpp
User_Documentation/: Documentation  History  ReadMe
core/: CMakeLists.txt  ark.cpp  ark.h
